Make printing work for PDF and Flash.

BUG=666432

Review-Url: https://codereview.chromium.org/2518993002
Cr-Commit-Position: refs/heads/master@{#433657}

Former-commit-id: 4665756d5cdece234b38a2c722f2489a5c53a647