chrome/browser/printing/print_view_manager.cc
@@ -123,9 +123,13 @@ bool PrintViewManager::PrintPreviewNow(content::RenderFrameHost* rfh,
   return true;
 }
 
-void PrintViewManager::PrintPreviewForWebNode() {
+void PrintViewManager::PrintPreviewForWebNode(content::RenderFrameHost* rfh) {
   if (print_preview_state_ != NOT_PREVIEWING)
     return;
+
+  DCHECK(rfh);
+  DCHECK(!print_preview_rfh_);
+  print_preview_rfh_ = rfh;
   print_preview_state_ = USER_INITIATED_PREVIEW;
 }
 
